// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentScreen DOM 스냅샷 (ADR-094 결정 4) > 수동 추적 모드 — 자동 모드와 다른 카드 구성 1`] = `
"<div data-testid="screen-scroll" class="bottom-[var(--tab-bar-h)] fixed inset-x-0 overflow-y-auto overscroll-y-none top-[var(--sa-top)]">
<div class="-mt-[var(--sa-top)] space-y-4">
<div>
<div class="bg-bg fixed inset-x-0 pb-2 pt-[calc(1rem+var(--sa-top))] px-4 top-0 z-10">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="font-semibold text-lg text-text">컨텐츠 스케줄러</h1>
<div class="flex gap-4 items-center">
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">컨텐츠 관리</button>
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">캐릭터 관리</button>
</div>
</div>
<div class="space-y-1">
<div class="flex gap-3 items-center">
<div class="inline-block relative">
<select class="appearance-none bg-surface border border-border min-w-[160px] pl-4 pr-9 py-3 rounded-[10px] text-sm text-text">
<option value="ocid-1">캐릭터1</option>
</select>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="-translate-y-1/2 absolute h-4 lucide lucide-chevron-down pointer-events-none right-3.5 text-text-muted top-1/2 w-4" data-testid="character-select-chevron" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</div>
<div class="flex gap-2 items-center ml-auto shrink-0">
<p class="text-sm text-text-muted whitespace-nowrap">동기화 기록 없음</p>
<button type="button" aria-label="새로고침" class="hover:text-primary-hover p-2 text-primary-ink">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-refresh-cw w-4" aria-hidden="true">
<path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8">
</path>
<path d="M21 3v5h-5">
</path>
<path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16">
</path>
<path d="M8 16H3v5">
</path>
</svg>
</button>
</div>
</div>
</div>
<div class="flex gap-4 items-center">
<button type="button" class="bg-primary-tint font-semibold px-3 py-[5px] rounded-full text-primary-ink text-sm">일간</button>
<button type="button" class="font-medium px-3 text-sm text-text-muted">주간</button>
</div>
</div>
<div class="absolute bg-gradient-to-b from-bg h-8 inset-x-0 pointer-events-none to-transparent top-full" style="mask-image: linear-gradient(black, transparent); -webkit-mask-image: linear-gradient(black, transparent);" aria-hidden="true">
</div>
</div>
<div aria-hidden="true" style="height: 0px;">
</div>
</div>
<div data-testid="pull-content" class="pb-4 px-4 space-y-4" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<ul class="space-y-2">
<li>
<div class="bg-surface border border-border h-28 media-scope overflow-hidden relative rounded-[14px]">
<div class="absolute inset-0" style="background-image: url(&quot;/src/assets/maps/monsterPark.webp&quot;); background-size: 250%; background-position: 5% 60%; background-repeat: no-repeat; filter: saturate(.85) brightness(.8); opacity: 0.65; mask-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 38%, transparent 76%); -webkit-mask-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 38%, transparent 76%);">
</div>
<div class="flex flex-col h-full relative">
<div class="flex h-20 items-center justify-between shrink-0" style="padding: 0px 14px;">
<div class="flex gap-2 items-center">
<img alt="" class="h-6 object-contain shrink-0 w-6" aria-hidden="true" src="/src/assets/maps/icons/monsterPark.png">
<span class="font-medium text-sm text-text" style="text-shadow: 0 1px 3px rgba(0,0,0,.9), 0 0 10px rgba(0,0,0,.6);">몬스터파크</span>
</div>
<span class="bg-third-tint font-semibold px-2.5 py-1 rounded-full text-third-ink text-xs">0/14</span>
</div>
<div class="flex flex-1 items-start pt-0 px-[14px]">
<div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="14" class="bg-track h-1.5 overflow-hidden rounded-full w-full">
<div class="bg-third h-1.5 rounded-full" style="width: 0%;">
</div>
</div>
</div>
</div>
</div>
</li>
</ul>
</div>
</div>
</div>"
`;

exports[`ContentScreen DOM 스냅샷 (ADR-094 결정 4) > 일간 탭 — 컨텐츠 카드와 진행률 바 1`] = `
"<div data-testid="screen-scroll" class="bottom-[var(--tab-bar-h)] fixed inset-x-0 overflow-y-auto overscroll-y-none top-[var(--sa-top)]">
<div class="-mt-[var(--sa-top)] space-y-4">
<div>
<div class="bg-bg fixed inset-x-0 pb-2 pt-[calc(1rem+var(--sa-top))] px-4 top-0 z-10">
<div class="space-y-4">
<div class="flex items-center justify-between">
<h1 class="font-semibold text-lg text-text">컨텐츠 스케줄러</h1>
<div class="flex gap-4 items-center">
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">캐릭터 관리</button>
</div>
</div>
<div class="space-y-1">
<div class="flex gap-3 items-center">
<div class="inline-block relative">
<select class="appearance-none bg-surface border border-border min-w-[160px] pl-4 pr-9 py-3 rounded-[10px] text-sm text-text">
<option value="ocid-1">캐릭터1</option>
</select>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" class="-translate-y-1/2 absolute h-4 lucide lucide-chevron-down pointer-events-none right-3.5 text-text-muted top-1/2 w-4" data-testid="character-select-chevron" aria-hidden="true">
<path d="m6 9 6 6 6-6">
</path>
</svg>
</div>
<div class="flex gap-2 items-center ml-auto shrink-0">
<p class="text-sm text-text-muted whitespace-nowrap">동기화 기록 없음</p>
<button type="button" aria-label="새로고침" class="hover:text-primary-hover p-2 text-primary-ink">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-4 lucide lucide-refresh-cw w-4" aria-hidden="true">
<path d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8">
</path>
<path d="M21 3v5h-5">
</path>
<path d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16">
</path>
<path d="M8 16H3v5">
</path>
</svg>
</button>
</div>
</div>
</div>
<div class="flex gap-4 items-center">
<button type="button" class="bg-primary-tint font-semibold px-3 py-[5px] rounded-full text-primary-ink text-sm">일간</button>
<button type="button" class="font-medium px-3 text-sm text-text-muted">주간</button>
</div>
</div>
<div class="absolute bg-gradient-to-b from-bg h-8 inset-x-0 pointer-events-none to-transparent top-full" style="mask-image: linear-gradient(black, transparent); -webkit-mask-image: linear-gradient(black, transparent);" aria-hidden="true">
</div>
</div>
<div aria-hidden="true" style="height: 0px;">
</div>
</div>
<div data-testid="pull-content" class="pb-4 px-4 space-y-4" style="transition: transform 300ms cubic-bezier(0.22, 1, 0.36, 1);">
<ul class="space-y-2">
<li>
<div class="bg-surface border border-border h-28 media-scope overflow-hidden relative rounded-[14px]">
<div class="absolute inset-0" style="background-image: url(&quot;/src/assets/maps/monsterPark.webp&quot;); background-size: 250%; background-position: 5% 60%; background-repeat: no-repeat; filter: saturate(.85) brightness(.8); opacity: 0.65; mask-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 38%, transparent 76%); -webkit-mask-image: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 38%, transparent 76%);">
</div>
<div class="flex flex-col h-full relative">
<div class="flex h-20 items-center justify-between shrink-0" style="padding: 0px 14px;">
<div class="flex gap-2 items-center">
<img alt="" class="h-6 object-contain shrink-0 w-6" aria-hidden="true" src="/src/assets/maps/icons/monsterPark.png">
<span class="font-medium text-sm text-text" style="text-shadow: 0 1px 3px rgba(0,0,0,.9), 0 0 10px rgba(0,0,0,.6);">몬스터파크</span>
</div>
<span class="bg-third-tint font-semibold px-2.5 py-1 rounded-full text-third-ink text-xs">7/14</span>
</div>
<div class="flex flex-1 items-start pt-0 px-[14px]">
<div role="progressbar" aria-valuenow="7" aria-valuemin="0" aria-valuemax="14" class="bg-track h-1.5 overflow-hidden rounded-full w-full">
<div class="bg-third h-1.5 rounded-full" style="width: 50%;">
</div>
</div>
</div>
</div>
</div>
</li>
<li>
<div class="bg-surface border border-border h-20 media-scope overflow-hidden relative rounded-[14px]">
<div class="flex h-full items-center justify-between relative" style="padding: 0px 14px;">
<div class="flex gap-2 items-center">
<span class="font-medium text-sm text-text" style="text-shadow: 0 1px 3px rgba(0,0,0,.9), 0 0 10px rgba(0,0,0,.6);">일일 퀘스트 - 레헬른</span>
</div>
</div>
</div>
</li>
</ul>
</div>
</div>
</div>"
`;

exports[`ContentScreen DOM 스냅샷 (ADR-094 결정 4) > 추적 캐릭터 없음 — 빈 상태 1`] = `
"<div class="flex flex-col min-h-[calc(100dvh-var(--sa-top)-var(--sa-bottom)-4rem)] p-4">
<div class="flex items-center justify-between">
<h1 class="font-semibold text-lg text-text">컨텐츠 스케줄러</h1>
<button type="button" class="font-medium hover:text-text text-sm text-text-muted">캐릭터 관리</button>
</div>
<div class="flex flex-1 flex-col items-center justify-center">
<div data-testid="empty-state" class="flex flex-col gap-4 items-center text-center">
<div data-testid="empty-state-badge" aria-hidden="true" class="bg-primary-tint flex h-[84px] items-center justify-center rounded-full w-[84px]">
<svg data-testid="empty-state-leaf" width="42" height="43" viewBox="0 0 127 130" class="fill-primary-ink">
<path d="M60.4426 107.504L59.1392 127.924C59.1024 128.5 59.5598 128.987 60.1372 128.987H65.9593C66.5534 128.987 67.0165 128.472 66.9537 127.882L64.785 107.496C64.6975 106.673 65.5908 106.106 66.2984 106.536L78.2704 113.805C78.4651 113.923 78.6944 113.971 78.9203 113.941L103.215 110.732C104.008 110.628 104.363 109.681 103.835 109.081L91.452 94.9894C91.0117 94.4885 91.1759 93.7052 91.7802 93.4231L118.529 80.9405C119.315 80.5738 119.293 79.4491 118.494 79.1126L112.061 76.4041C111.526 76.1789 111.295 75.5471 111.558 75.0296L125.96 46.675C126.366 45.8757 125.596 44.9873 124.747 45.275L98.4688 54.1831C97.9655 54.3537 97.4167 54.1008 97.2193 53.6074L95.2595 48.7079C94.9641 47.9693 93.9662 47.8547 93.5109 48.5071L82.408 64.4213C81.7836 65.3163 80.3814 64.7067 80.6101 63.6396L88.1353 28.5217C88.311 27.7019 87.4603 27.0428 86.7103 27.4178L81.4218 30.062C80.9453 30.3003 80.3657 30.1231 80.1038 29.6592L63.9299 1.00826C63.5499 0.335101 62.5824 0.329222 62.1943 0.997712L45.543 29.6749C45.2779 30.1315 44.7033 30.3033 44.231 30.0672L38.9323 27.4178C38.1823 27.0428 37.3315 27.7018 37.5072 28.5217L44.9884 63.4338C45.2189 64.5095 43.7966 65.1145 43.1815 64.2025L32.5593 48.4523C32.1246 47.8077 31.1528 47.884 30.824 48.5885L28.4482 53.6797C28.2334 54.14 27.7076 54.3661 27.2258 54.2055L1.8202 45.7369C0.98094 45.4572 0.218491 46.3249 0.603813 47.1212L14.1413 75.0988C14.3797 75.5913 14.1779 76.184 13.6884 76.4287L7.43998 79.553C6.68865 79.9286 6.70724 81.0071 7.47107 81.3567L33.8706 93.4379C34.4733 93.7136 34.6458 94.4888 34.217 94.9941L22.2282 109.124C21.7222 109.72 22.0657 110.64 22.8386 110.759L46.6876 114.428C46.9344 114.466 47.1865 114.41 47.3943 114.272L58.8899 106.608C59.5787 106.149 60.4953 106.678 60.4426 107.504Z">
</path>
</svg>
</div>
<div class="space-y-1">
<p data-testid="empty-state-title" class="font-semibold text-base text-text">표시할 캐릭터가 없습니다</p>
<p data-testid="empty-state-description" class="max-w-[220px] text-sm text-text-muted">캐릭터를 선택하면 일간·주간 컨텐츠를 확인할 수 있습니다</p>
</div>
<button type="button" class="bg-primary font-semibold hover:bg-primary-hover px-5 py-2.5 rounded-full text-on-primary text-sm">캐릭터 선택하기</button>
</div>
</div>
</div>"
`;
